# map_matching

./: README.md  config.py  pyproject.toml
notebooks/: notebook_map_matching.py
src/algorithm/: viterbi_algorithm.py
src/data/: loaders.py  processing.py
src/model/: build_hidden_markov_model.py  hidden_markov_model.py  utils.py
src/vizualisation/: plots.py
