[tool.poetry]
name = "map-matching"
version = "0.1.0"
description = "hidden markov model for map matching"
authors = ["ojabri <ojabri@mytraffic.fr>"]
readme = "README.md"
packages = [{include = "map_matching"}]

[tool.poetry.dependencies]
python = "3.9.2"
pandas = "^2.0.0"
osmnx = "^1.3.0"
networkx = "^3.0"
numpy = "^1.24.2"
scikit-learn = "^1.2.2"
streamlit = "^1.22.0"
pydeck = "^0.8.0"
mypy = "^1.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
